--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,8 +1,28 @@
 /*=============== HEADER ===============*/
-
+.header{
+    width: 100%;
+    background-color: var(--body-color);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+    transition: .5s; //For animation dark mode
+}
 
 /*=============== NAV ===============*/
+.nav{
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
+    &__menu{
+        @media screen and (max-width: 767px){
+            position: fixed;
+            background-color: var(--container-color);
+        }
+    }
+}
 
 /* Show menu */
 
