make-some-styles

--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -147,10 +147,38 @@ img {
   .nav__menu {
     position: fixed;
     background-color: var(--container-color);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    padding: 2.5rem 0;
+    width: 90%;
+    top: -100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    transition: 0.4s;
+    border-radius: 2rem;
+    z-index: var(--z-fixed);
   }
+}
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1.5rem;
+}
+.nav__link, .nav__logo, .nav__toggle {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+.nav__toggle {
+  font-size: 1.3rem;
+  cursor: pointer;
 }
 
 /* Show menu */
+.show-menu {
+  top: calc(var(--header-height) + 1rem);
+}
+
 /* Change background header */
 /*=============== HOME ===============*/ /*=============== BUTTONS ===============*/
 .button__header {
