--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -20,11 +20,39 @@
         @media screen and (max-width: 767px){
             position: fixed;
             background-color: var(--container-color);
+            box-shadow: 0 0 4px rgba(0,0,0,.1);
+            padding: 2.5rem 0;
+            width: 90%;
+            top: -100%;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            transition: .4s;
+            border-radius: 2rem;
+            z-index: var(--z-fixed);
         }
+    }
+    &__list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 1.5rem;
+    }
+    &__link,
+    &__logo,
+    &__toggle{
+        color: var(--title-color);
+        font-weight: var(--font-semi-bold);
+    }
+    &__toggle{
+        font-size: 1.3rem;
+        cursor: pointer;
     }
 }
 
 /* Show menu */
-
+.show-menu{
+    top: calc(var(--header-height) + 1rem); //4rem
+}
 
 /* Change background header */
