--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -180,12 +180,53 @@ img {
 }
 
 /* Change background header */
-/*=============== HOME ===============*/ /*=============== BUTTONS ===============*/
+/*=============== HOME ===============*/
+.home__container {
+  row-gap: 3rem;
+}
+.home__title {
+  font-size: var(--biggest-font-size);
+  font-weight: var(--font-bold);
+  margin-bottom: var(--mb-0-75);
+}
+.home__description {
+  margin-bottom: var(--mb-2);
+}
+
+/*=============== BUTTONS ===============*/
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #1A1A1A;
+  padding: 0.75rem 1.5rem;
+  border-radius: 3rem;
+  font-weight: var(--font-semi-bold);
+  transition: 0.3s;
+}
+.button:hover {
+  background-color: var(--first-color-alt);
+}
 .button__header {
   display: none;
 }
 
-/*=============== ABOUT ===============*/ /*=============== SECURITY ===============*/ /*=============== SERVICES ===============*/ /*=============== APP ===============*/ /*=============== CONTACT ===============*/ /*=============== FOOTER ===============*/ /*=============== SCROLL UP ===============*/
+/*=============== ABOUT ===============*/
+.about__container {
+  gap: 2.5rem;
+}
+.about__data {
+  text-align: center;
+}
+
+/*=============== SECURITY ===============*/
+.security__container {
+  gap: 2.5rem;
+}
+.security__description {
+  text-align: center;
+}
+
+/*=============== SERVICES ===============*/ /*=============== APP ===============*/ /*=============== CONTACT ===============*/ /*=============== FOOTER ===============*/ /*=============== SCROLL UP ===============*/
 /* Show Scroll Up*/
 /*=============== SCROLL BAR ===============*/
 /*=============== MEDIA QUERIES ===============*/
