change-background-header

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -55,4 +55,20 @@
     top: calc(var(--header-height) + 1rem); //4rem
 }
 
+/* Active link */
+.active-link{
+    position: relative;
+
+    &::before{
+        content:'';
+        position: absolute;
+        bottom: -.75rem;
+        left: 45%;
+        width: 5px;
+        height: 5px;
+        background-color: var(--title-color);
+        border-radius: 50%;
+    }
+}
+
 /* Change background header */
