--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -7,7 +7,7 @@
         text-align: center;
     }
     &__content{
-        row-gap: .75rem;
+        row-gap: 1.5rem;
     }
     &__address{
         font-size: var(--small-font-size);
