--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -2,7 +2,7 @@
 .button{
     display: inline-block;
     background-color: var(--first-color);
-    color: #1A1A1A; // Use color black for yellow 
+    color: #fff; // Use color black for yellow 
     padding: .75rem 1.5rem;
     border-radius: 3rem;
     font-weight: var(--font-semi-bold);
@@ -32,10 +32,12 @@
         align-items: center;
         column-gap: .25rem;
         padding: .75rem 1rem;
+        margin-right: 1rem;
     }
 
     &__icon{
         font-size: 1.5rem;
+        
     }
 
 }
