--- a/assets/scss/components/_mediaqueries.scss
+++ b/assets/scss/components/_mediaqueries.scss
@@ -37,7 +37,12 @@
     .footer__container{
         grid-template-columns: repeat(2, 1fr);
     }
-
+    .app__buttons{
+        padding-right: 6.5rem;
+    }
+    .app__container{
+        padding-left: 10rem;
+    }
     .home__img{
         order: 1;
     }
@@ -83,6 +88,12 @@
             display: none;
         }
     }
+    .app__buttons{
+        padding-left: 4.5rem;
+    }
+    .app__container{
+        padding-left: 15rem;
+    }
 
     .change-theme{
         position: initial;
@@ -117,7 +128,12 @@
     .services__container{
         grid-template-columns: repeat(3, 1fr);
     }
-
+    .app__buttons{
+        padding-left: 4.5rem;
+    }
+    .app__container{
+        padding-left: 15rem;
+    }
     .contact__container{
         grid-template-columns: 3fr 1.5fr 1.25fr;
     }
@@ -149,8 +165,13 @@
         &__description{
             padding-right: 5rem;
         }
+    }   
+    .app__buttons{
+        padding-left: 4.5rem;
     }
-
+    .app__container{
+        padding-left: 15rem;
+    }
     .footer__container{
         column-gap: 3rem;
     }
